[gd_scene load_steps=8 format=3 uid="uid://blyap848rwn7x"]

[ext_resource type="Script" path="res://pa_model.gd" id="1_u6ll4"]
[ext_resource type="Script" path="res://PA_carp.gd" id="2_ekamk"]
[ext_resource type="Script" path="res://PA_carp2.gd" id="2_nmubu"]
[ext_resource type="Script" path="res://Camera2D.gd" id="3_1ulky"]

[sub_resource type="Curve" id="Curve_vee7w"]
_data = [Vector2(0.0568182, 0.185146), 0.0, 0.0, 0, 0, Vector2(0.314935, 0.741506), 0.0, 0.0, 0, 0, Vector2(0.642857, 0.560047), 0.0, 0.0, 0, 0, Vector2(1, 0.0875691), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_cd50t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g13t8"]

[node name="PA_model" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_u6ll4")

[node name="PA_carp" type="Line2D" parent="." groups=["light", "player"]]
width = 20.0
width_curve = SubResource("Curve_vee7w")
default_color = Color(0.992157, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("2_nmubu")

[node name="PA_carp2" type="Line2D" parent="PA_carp"]
z_index = -1
position = Vector2(5, -5)
width = 15.0
width_curve = SubResource("Curve_vee7w")
default_color = Color(0, 0, 0, 0.862745)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("2_ekamk")

[node name="item_area" type="Area2D" parent="PA_carp"]

[node name="item_area" type="CollisionShape2D" parent="PA_carp/item_area"]
shape = SubResource("CircleShape2D_cd50t")
debug_color = Color(0.627451, 0.529412, 0.0705882, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="PA_carp"]

[node name="ItemCounterLabel" type="Label" parent="PA_carp/CanvasLayer" groups=["player"]]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
size_flags_vertical = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_g13t8")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("line2d", "camera2d")]
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("3_1ulky")
line2d = NodePath("../PA_carp")
camera2d = NodePath(".")
